[package]
name = "yaydl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
reqwest = {version="0.11.24", features=["blocking"]}
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"
